# newshub

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  prod_settings.example.env  pyproject.toml  settings.example.env
.github/workflows/: codeql.yml  dependabot.yml
api/: serializers.py  urls.py  views.py
authnz/: admin.py  apps.py  authentication.py  forms.py  models.py  tests.py  urls.py  views.py
authnz/fixtures/: admin_user.json
authnz/migrations/: 0001_initial.py  0002_user_api_key.py  0002_user_subscribe_new_categories.py  0003_alter_user_api_key.py  0003_remove_user_subscribe_new_categories.py  0004_alter_user_api_key.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  settings.example.env
news/: admin.py  context_processors.py  filters.py  forms.py  models.py  tasks.py  urls.py  views.py
news/fixtures/: categories.json  sample_links.json
news/migrations/: 0001_initial.py  0002_alter_link_category_alter_link_created_by.py  0002_alter_link_newsletter.py  0003_newsletter_link_newsletter.py  0003_rename_created_link_date_created_and_more.py  0004_category_subscribers.py  0004_rename_sent_newsletter_date_sent.py  0005_alter_category_subscribers.py  0005_rename_send_success_newsletter_mailout_success.py  0006_alter_category_subscribers_feed_feedlink.py  0006_remove_newsletter_mailout_success.py  0007_alter_category_subscribers_alter_feed_type.py  0008_alter_category_subscribers_alter_feed_type.py  0009_rename_selected_feedlink_saved_and_more.py
news/tasks/: __init__.py  feeds.py  newsletter.py
news/templates/: link_form.html  link_list.html  login.html  register.html
news/templatetags/: gravatar.py  userlinks.py
newshub/: __init__.py  asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
templates/: base.html  form.html  index.html  menu.html  pagination.html
(+28 files in other folders)
