[tool.poetry]
name = "newshub"
version = "0.1.0"
description = "Collaborative news sharing platform"
authors = ["Mathieu Deous <mat.deous@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.2"
django-cors-headers = "^4.3.1"
django-bootstrap5 = "^24.2"
django-mail-panel = "^4.0.4"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
